[package]
name = "cutthroat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
cutthroat_engine = { path = "../cutthroat_engine" }
thiserror = "2.0.18"
rand = "0.8.5"
anyhow = "1.0.100"
