[package]
name = "cutthroat_engine-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.cutthroat_engine]
path = ".."

[[bin]]
name = "state_tokenlog_roundtrip"
path = "fuzz_targets/state_tokenlog_roundtrip.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
